Fixed advantages max width on mobile

--- a/src/less/advantages.less
+++ b/src/less/advantages.less
@@ -24,7 +24,7 @@
         margin-bottom: 25px;
 
         @media  @phone-strict {
-            max-width: 250px;
+            max-width: 280px;
         }
     }
 
